--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rumbia-test",
+  "homepage": "https://opikzxx.github.io/rumbiatest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "html-react-parser": "^5.1.18",
