--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "rumbia-test",
-  "homepage": "https://opikzxx.github.io/rumbiatest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "html-react-parser": "^5.1.18",
